# ScanGuard

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
examples/: sample_report.md  scope.txt
recon_ai/: __init__.py  cli.py  config.py  constants.py  logging_config.py  main.py
recon_ai/ai/: __init__.py  agent.py  groq_client.py  memory.py  prompts.py  safety.py
recon_ai/mcp/: executor.py  permissions.py  registry.py  schemas.py
recon_ai/parsers/: __init__.py  generic_parser.py  httpx_parser.py  nikto_parser.py  nmap_parser.py  nuclei_parser.py
recon_ai/reports/: report_generator.py
recon_ai/reports/templates/: report.html.j2  report.md.j2
recon_ai/storage/: database.py  models.py  workspace.py
recon_ai/tools/: __init__.py  base.py  dns_tools.py  metadata_tools.py  passive_tools.py  port_tools.py  subdomain_tools.py  tls_tools.py  web_tools.py
recon_ai/utils/: files.py  shell.py  time.py  validators.py
scanguard/: __init__.py  __main__.py  cli.py  config.py  constants.py  logging_config.py  main.py
scanguard/ai/: agent.py  autopilot.py  groq_client.py  memory.py  prompts.py  safety.py
scanguard/mcp/: __init__.py  executor.py  permissions.py  registry.py  schemas.py
scanguard/parsers/: generic_parser.py  headers_parser.py  httpx_parser.py  naabu_parser.py  nikto_parser.py  nmap_parser.py  nuclei_parser.py
scanguard/reports/: report_generator.py
scanguard/storage/: database.py  workspace.py
scanguard/tools/: base.py  dns_tools.py  metadata_tools.py  passive_tools.py  port_tools.py  subdomain_tools.py  tls_tools.py  web_tools.py
scanguard/utils/: shell.py
tests/: test_agent_autopilot.py  test_binary_resolution.py  test_cli_entrypoint.py  test_parsers.py  test_report_generation.py  test_safety.py  test_scope_validation.py  test_tool_registry.py
