[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "recon-ai"
version = "0.1.0"
description = "AI-assisted reconnaissance workflow manager for authorized security testing on Kali Linux."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
keywords = ["security", "kali", "reconnaissance", "cli", "groq", "mcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "loguru>=0.7,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "rich>=13.7,<14",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
recon-ai = "recon_ai.main:main"

[tool.hatch.build.targets.wheel]
packages = ["recon_ai"]
include = [
  "recon_ai/reports/templates/*.j2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "S"]
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
pretty = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

